OaiHarvesterBuilder separate required and optional parameters